@@ -30,4 +30,6 @@ TABLE_NAME=$2
 
 SCRIPTS_DIR=$(cd "$(dirname "$0")" && cd "../" && pwd)
 
-java -cp "${SCRIPTS_DIR}"/jars/clients-*-utility.jar sleeper.clients.status.report.PartitionsStatusReport "${INSTANCE_ID}" "${TABLE_NAME}"
+java -cp "${SCRIPTS_DIR}"/jars/clients-*-utility.jar \
+  --add-opens java.base/java.nio=ALL-UNNAMED \
+  sleeper.clients.status.report.PartitionsStatusReport "${INSTANCE_ID}" "${TABLE_NAME}"
